--- a/docs/my-app/src/App.css
+++ b/docs/my-app/src/App.css
@@ -1,3 +1,66 @@
+:root {
+
+  --text-color-saltrock-red: #D96941; /* Verde-4-hex */
+  --background-color: #193C40; /* Verde-1-hex */
+  --accessory-color-1-green: #2E5902; /* Verde-2-hex */
+  --accessory-color-2-darkgreen: #214001; /* Verde-3-hex */
+  --accent-color-darkred: #A62B1F; /* Verde-5-hex */
+
+  --text-shadow: var(--accessory-color-2-darkgreen);
+  --backdrop-filter: blur(10px); /* Blur the background */
+}
+
+.text {
+  text-shadow: var(--accessory-color-2-darkgreen);
+  backdrop-filter: blur(10px); /* Blur the background */
+}
+
+a {
+  color: var(--accessory-color-2-darkgreen); /* Use the accent color for hyperlinks */
+  text-decoration: none; /* Remove the default underline */
+  font-weight: bold; /* Make the font bold */
+  transition: color 0.2s ease; /* Add a transition effect */
+}
+
+a:hover {
+  color: var(--accent-color-darkred); /* Change the color on hover */
+}
+
+body {
+  color: var(--text-color-saltrock-red);
+  background-color: var(--background-color);
+}
+/* Use the accessory colors for buttons, icons, etc. */
+button {
+  background-color: var(--background-color);
+  color: var(--text-color-saltrock-red);
+  font-weight: bold;
+  border-radius: 8px; /* Add this line to make the buttons rounded */
+  padding: 8px 16px; /* Add some padding to make the button look nicer */
+  border: none; /* Remove the default button border */
+  cursor: pointer; /* Add a pointer cursor to indicate that the button is clickable */
+}
+button:hover {
+  text-shadow: var(--accessory-color-2-darkgreen);
+  backdrop-filter: blur(10px); /* Blur the background */
+  background-color: var(--accessory-color-1-green);
+  color: var(--text-color-saltrock-red);
+  font-weight: bold;
+  border-radius: 8px; /* Add this line to make the buttons rounded */
+  padding: 8px 16px; /* Add some padding to make the button look nicer */
+  border: none; /* Remove the default button border */
+  cursor: pointer; /* Add a pointer cursor to indicate that the button is clickable */
+}
+.icon {
+  color: var(--accessory-color-2-darkgreen);
+}
+
+/* Use the accent color for calls-to-action, notifications, etc. */
+.call-to-action {
+  background-color: var(--accent-color-darkred);
+  color: var(--text-color-saltrock-red);
+}
+
 .App {
   text-align: center;
 }
@@ -37,13 +100,68 @@
   }
 }
 
+.page-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 100vh;
+  background-image: url('./assets/backgroundImage.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.text-blur-wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  gap: 2rem;
+
+  padding: 2rem;
+  width: 90vw;
+  margin: 0 auto;
+  backdrop-filter: blur(10px) brightness(1.1);
+  border-radius: 20px;
+  background-image: linear-gradient(to bottom, rgba(25, 60, 64, 0.7), rgba(46, 89, 2, 0.37));
+  background-clip: padding-box;
+  box-shadow: 0 0 20px rgba(33, 64, 1, 0.1);
+}
+.landing {
+  text-align: center;
+  padding: 2rem;
+  display: block;
+  width: 30vw;
+  margin: 0 auto;
+  border-right: 2px solid var(--background-color);
+}
+
+.description-container {
+  text-align: justify;
+  padding: 2rem;
+  width: 70vw;
+  margin: 0 auto;
+  position: relative;
+
+  box-shadow: var(--accent-color-darkred);
+  text-shadow: var(--accessory-color-2-darkgreen);
+
+}
+
+.landing::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 2px;
+}
+
 .plant-card {
-  border: 1px solid #ccc;
+  border: 1px solid #2E5902; /* Verde-2-hex */
   border-radius: 8px;
   padding: 16px;
   margin: 16px;
   text-align: left;
-  background-color: #f9f9f9;
+  background-color: #D96941; /* Verde-4-hex */
   transition: box-shadow 0.3s;
 }
 
@@ -57,11 +175,11 @@
 }
 
 .header {
-  background-color: #4caf50; /* Green background */
+  background-color: var(--text-color-saltrock-red); /* Verde-1-hex */
   padding: 10px;
-  color: white;
+  color: var(--accent-color-darkred);
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
 }
 
@@ -77,7 +195,7 @@
   position: absolute;
   top: -5px;
   right: -10px;
-  background-color: red;
+  background-color: #A62B1F; /* Verde-5-hex */
   color: white;
   border-radius: 50%;
   padding: 2px 6px;
@@ -86,13 +204,14 @@
 
 .cart-page {
   padding: 20px;
+  background-color: #214001; /* Verde-3-hex */
 }
 
 .cart-item {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border-bottom: 1px solid #ccc;
+  border-bottom: 1px solid #2E5902; /* Verde-2-hex */
   padding: 10px 0;
 }
 
@@ -106,11 +225,21 @@
   font-size: 20px;
   font-weight: bold;
   margin-top: 20px;
+  color: #A62B1F; /* Verde-5-hex */
 }
 
 @media (max-width: 768px) {
   .plant-card {
     flex: 1 1 100%; /* Stack cards on smaller screens */
   }
+}
+
+.landing {
+  text-align: center;
+  padding: 2rem;
+  display: block;
+  width: 30vw;
+  margin: 0 auto;
+  border-right: 2px solid var(--background-color);
 }
 
